Updates for keycloak and platform agnostic for closing issue

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -44,7 +44,7 @@ services:
 
   jbpm-compact-architecture-example-service:
     container_name: jbpm-compact-architecture-example-service
-    image: dev.local/${USER}/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
+    image: dev.local/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
     profiles: ["example", "full"]
     ports:
       - "8080:8080"
@@ -55,11 +55,11 @@ services:
       QUARKUS_DATASOURCE_USERNAME: kogito-user
       QUARKUS_DATASOURCE_PASSWORD: kogito-pass
       QUARKUS_DATASOURCE_DB_KIND: postgresql
-      KOGITO_JOBS_SERVICE_URL: http://${DOCKER_GATEWAY_HOST}:8080
-      KOGITO_SERVICE_URL: http://${DOCKER_GATEWAY_HOST}:8080
-      KOGITO_DATAINDEX_HTTP_URL: http://${DOCKER_GATEWAY_HOST}:8080
+      KOGITO_JOBS_SERVICE_URL: http://${BROWSER_HOST}:8080
+      KOGITO_SERVICE_URL: http://${BROWSER_HOST}:8080
+      KOGITO_DATAINDEX_HTTP_URL: http://${BROWSER_HOST}:8080
     extra_hosts:
-      - "${DOCKER_GATEWAY_HOST}:host-gateway"
+      - "${BROWSER_HOST}:host-gateway"
 
   keycloak:
     container_name: keycloak
@@ -100,8 +100,15 @@ services:
     volumes:
       - ./svg/:/home/kogito/data/svg/
     environment:
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "DEV"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:8080/graphql
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: http://${BROWSER_HOST}:8080/graphql
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "PROD"
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_NAME: "management-console"
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_VERSION:
+      KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK: False
+      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: http://localhost:8480/auth/realms/kogito/.well-known/openid-configuration
+      KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
+      KOGITO_CONSOLES_KEYCLOAK_URL: http://localhost:8480/auth
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
 
   task-console:
     container_name: task-console
@@ -116,7 +123,7 @@ services:
         condition: service_healthy
     environment:
       RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:8080/graphql
+      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: http://${BROWSER_HOST}:8080/graphql
       KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: http://localhost:8480/auth/realms/kogito/.well-known/openid-configuration
       KOGITO_CONSOLES_KEYCLOAK_URL: http://localhost:8480/auth
       KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
