--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   jbpm-compact-architecture-example-service:
     container_name: jbpm-compact-architecture-example-service
-    image: dev.local/${USER}/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
+    image: ${REGISTRY_PREFIX}/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
     profiles: ["example", "full"]
     ports:
       - "8080:8080"
