Fixing maven issue and how test containers work

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,17 @@ RUN bash -c ". /usr/local/sdkman/bin/sdkman-init.sh && sdk version"
 RUN apt-get update && apt-get install -y maven
 
 # Create .m2 directory and settings.xml
-COPY settings.xml /home/vscode/.m2/settings.xml
+RUN mkdir -p /home/vscode/.m2 \
+	&& echo '<?xml version="1.0" encoding="UTF-8"?>' > /home/vscode/.m2/settings.xml \
+	&& echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">' >> /home/vscode/.m2/settings.xml \
+	&& echo '  <mirrors>' >> /home/vscode/.m2/settings.xml \
+	&& echo '    <mirror>' >> /home/vscode/.m2/settings.xml \
+	&& echo '      <id>central-secure</id>' >> /home/vscode/.m2/settings.xml \
+	&& echo '      <url>https://repo.maven.apache.org/maven2</url>' >> /home/vscode/.m2/settings.xml \
+	&& echo '      <mirrorOf>central</mirrorOf>' >> /home/vscode/.m2/settings.xml \
+	&& echo '    </mirror>' >> /home/vscode/.m2/settings.xml \
+	&& echo '  </mirrors>' >> /home/vscode/.m2/settings.xml \
+	&& echo '</settings>' >> /home/vscode/.m2/settings.xml
 
 # Pre-populate common Maven dependencies
 RUN mkdir -p /home/vscode/tmp-project && \
