--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,6 +24,9 @@ RUN mkdir -p /home/vscode/.m2 && \
 RUN curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose \
 	&& chmod +x /usr/local/bin/docker-compose
 
+# Ensure docker group exists and add vscode user to it
+RUN groupadd -f docker && usermod -aG docker vscode
+
 # Install additional dependencies
 RUN apt-get update && apt-get install -y \
 	curl \
