--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres:16.1-alpine3.19
+    build:
+      context: .
+      dockerfile: Dockerfile
     profiles: ["infra", "example", "full"]
     ports:
       - "5432:5432"
     volumes:
-      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-q", "-d", "kogito", "-U", "kogito-user"]
       timeout: 45s
@@ -16,15 +18,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       LANG: en_US.utf8
-      PGDATA: /var/lib/postgresql/data/PGDATA
-    user: postgres
 
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4:8.2
     profiles: ["infra", "example", "full"]
     ports:
-      - 8055:80
+      - "8055:80"
     depends_on:
       - postgres
     volumes:
@@ -42,25 +42,6 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
       GUNICORN_ACCESS_LOGFILE: "/dev/null"
-
-  jbpm-compact-architecture-example-service:
-    container_name: jbpm-compact-architecture-example-service
-    image: ${REGISTRY_PREFIX}/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
-    profiles: ["example", "full"]
-    ports:
-      - "8080:8080"
-    environment:
-      QUARKUS_HTTP_CORS_ORIGINS: "/.*/"
-      QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgres:5432/kogito"
-      QUARKUS_DATASOURCE_REACTIVE_URL: "postgresql://postgres:5432/kogito"
-      QUARKUS_DATASOURCE_USERNAME: kogito-user
-      QUARKUS_DATASOURCE_PASSWORD: kogito-pass
-      QUARKUS_DATASOURCE_DB_KIND: postgresql
-      KOGITO_JOBS_SERVICE_URL: http://${BROWSER_HOST}:8080
-      KOGITO_SERVICE_URL: http://${BROWSER_HOST}:8080
-      KOGITO_DATAINDEX_HTTP_URL: http://${BROWSER_HOST}:8080
-    extra_hosts:
-      - "${BROWSER_HOST}:host-gateway"
 
   keycloak:
     container_name: keycloak
@@ -88,35 +69,41 @@ services:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
       KEYCLOAK_IMPORT: /tmp/kogito-realm.json
+      KEYCLOAK_HTTP_ENABLED: "true"
+      KC_HTTP_RELATIVE_PATH: "/auth"
+      KC_HOSTNAME: obscure-goldfish-6pv99w9r4fxxjq-8480.app.github.dev
+      KC_PROXY: "edge"
+      KC_CORS: "true"
+      KC_CORS_ALLOWED_ORIGINS: "https://${CODESPACE_NAME}-8280.app.github.dev"
 
   management-console:
     container_name: management-console
     image: ${KOGITO_MANAGEMENT_CONSOLE_IMAGE}
     profiles: ["full"]
     ports:
-      - 8280:8080
+      - "8280:8080"
     depends_on:
       jbpm-compact-architecture-example-service:
         condition: service_started
     volumes:
       - ./svg/:/home/kogito/data/svg/
     environment:
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: http://${BROWSER_HOST}:8080/graphql
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: "https://${CODESPACE_NAME}-8080.app.github.dev/graphql"
       RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "PROD"
       RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_NAME: "management-console"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_VERSION:
-      KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK: False
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: http://localhost:8480/auth/realms/kogito/.well-known/openid-configuration
-      KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
-      KOGITO_CONSOLES_KEYCLOAK_URL: http://localhost:8480/auth
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_VERSION: ""
+      KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK: "False"
+      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth/realms/kogito/.well-known/openid-configuration"
+      KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
+      KOGITO_CONSOLES_KEYCLOAK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
 
   task-console:
     container_name: task-console
     image: ${KOGITO_TASK_CONSOLE_IMAGE}
     profiles: ["full"]
     ports:
-      - 8380:8080
+      - "8380:8080"
     depends_on:
       jbpm-compact-architecture-example-service:
         condition: service_started
@@ -124,8 +111,29 @@ services:
         condition: service_healthy
     environment:
       RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: http://${BROWSER_HOST}:8080/graphql
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: http://localhost:8480/auth/realms/kogito/.well-known/openid-configuration
-      KOGITO_CONSOLES_KEYCLOAK_URL: http://localhost:8480/auth
-      KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
+      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: "https://${CODESPACE_NAME}-8080.app.github.dev/graphql"
+      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth/realms/kogito/.well-known/openid-configuration"
+      KOGITO_CONSOLES_KEYCLOAK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth"
+      KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
+
+  jbpm-compact-architecture-example-service:
+    container_name: jbpm-compact-architecture-example-service
+    image: ${REGISTRY_PREFIX}/jbpm-compact-architecture-example-service:${PROJECT_VERSION}
+    profiles: ["example", "full"]
+    ports:
+      - "8080:8080"
+    environment:
+      QUARKUS_HTTP_CORS_ORIGINS: "/.*/"
+      QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgres:5432/kogito"
+      QUARKUS_DATASOURCE_REACTIVE_URL: "postgresql://postgres:5432/kogito"
+      QUARKUS_DATASOURCE_USERNAME: "kogito-user"
+      QUARKUS_DATASOURCE_PASSWORD: "kogito-pass"
+      QUARKUS_DATASOURCE_DB_KIND: "postgresql"
+      KOGITO_JOBS_SERVICE_URL: "http://jbpm-compact-architecture-example-service:8080"
+      KOGITO_SERVICE_URL: "http://jbpm-compact-architecture-example-service:8080"
+      KOGITO_DATAINDEX_HTTP_URL: "http://jbpm-compact-architecture-example-service:8080"
+
+volumes:
+  postgres_data:
+    name: postgres_data
