--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   postgres:
     container_name: postgres
@@ -71,10 +72,12 @@ services:
       KEYCLOAK_IMPORT: /tmp/kogito-realm.json
       KEYCLOAK_HTTP_ENABLED: "true"
       KC_HTTP_RELATIVE_PATH: "/auth"
-      KC_HOSTNAME: obscure-goldfish-6pv99w9r4fxxjq-8480.app.github.dev
+      KC_HOSTNAME: ${HOSTNAME_OVERRIDE:-localhost}
       KC_PROXY: "edge"
+      KC_HTTP_ENABLED: "true"
       KC_CORS: "true"
-      KC_CORS_ALLOWED_ORIGINS: "https://${CODESPACE_NAME}-8280.app.github.dev"
+      KC_CORS_ALLOWED_ORIGINS: "${TASK_URL},${MANAGEMENT_URL}"
+      KC_HOSTNAME_STRICT_HTTPS: "false"
 
   management-console:
     container_name: management-console
@@ -88,15 +91,11 @@ services:
     volumes:
       - ./svg/:/home/kogito/data/svg/
     environment:
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: "https://${CODESPACE_NAME}-8080.app.github.dev/graphql"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_NAME: "management-console"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_APP_VERSION: ""
-      KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK: "False"
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth/realms/kogito/.well-known/openid-configuration"
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: "${JBPM_URL}/graphql"
+      KOGITO_CONSOLES_KEYCLOAK_URL: "${KEYCLOAK_URL}/auth"
+      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "${KEYCLOAK_URL}/auth/realms/kogito/.well-known/openid-configuration"
       KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
-      KOGITO_CONSOLES_KEYCLOAK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth"
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "management-console"
 
   task-console:
     container_name: task-console
@@ -110,12 +109,11 @@ services:
       keycloak:
         condition: service_healthy
     environment:
-      RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: "https://${CODESPACE_NAME}-8080.app.github.dev/graphql"
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth/realms/kogito/.well-known/openid-configuration"
-      KOGITO_CONSOLES_KEYCLOAK_URL: "https://${CODESPACE_NAME}-8480.app.github.dev/auth"
+      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: "${JBPM_URL}/graphql"
+      KOGITO_CONSOLES_KEYCLOAK_URL: "${KEYCLOAK_URL}/auth"
+      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "${KEYCLOAK_URL}/auth/realms/kogito/.well-known/openid-configuration"
       KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "task-console"
 
   jbpm-compact-architecture-example-service:
     container_name: jbpm-compact-architecture-example-service
@@ -124,15 +122,16 @@ services:
     ports:
       - "8080:8080"
     environment:
-      QUARKUS_HTTP_CORS_ORIGINS: "/.*/"
-      QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgres:5432/kogito"
-      QUARKUS_DATASOURCE_REACTIVE_URL: "postgresql://postgres:5432/kogito"
+      QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgres/kogito"
       QUARKUS_DATASOURCE_USERNAME: "kogito-user"
       QUARKUS_DATASOURCE_PASSWORD: "kogito-pass"
-      QUARKUS_DATASOURCE_DB_KIND: "postgresql"
-      KOGITO_JOBS_SERVICE_URL: "http://jbpm-compact-architecture-example-service:8080"
-      KOGITO_SERVICE_URL: "http://jbpm-compact-architecture-example-service:8080"
-      KOGITO_DATAINDEX_HTTP_URL: "http://jbpm-compact-architecture-example-service:8080"
+      QUARKUS_HTTP_CORS: "true"
+      QUARKUS_HTTP_CORS_ORIGINS: "/.*/,${TASK_URL},${MANAGEMENT_URL}"
+      QUARKUS_HTTP_CORS_METHODS: "GET,POST,PUT,DELETE,OPTIONS"
+      QUARKUS_HTTP_CORS_HEADERS: "accept,authorization,content-type,x-requested-with,x-forward-for,content-length,host,origin,referer,Access-Control-Request-Method,Access-Control-Request-Headers"
+      QUARKUS_HTTP_CORS_EXPOSED_HEADERS: "Content-Disposition,Content-Type"
+      QUARKUS_HTTP_CORS_ACCESS_CONTROL_MAX_AGE: "24H"
+      QUARKUS_HTTP_CORS_ACCESS_CONTROL_ALLOW_CREDENTIALS: "true"
 
 volumes:
   postgres_data:
