--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -93,9 +93,11 @@ services:
     environment:
       RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: "${JBPM_URL}/graphql"
       KOGITO_CONSOLES_KEYCLOAK_URL: "${KEYCLOAK_URL}/auth"
+      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_APP_NAME: "management-console"
+      RUNTIME_TOOLS_MANAGEMENT_KOGITO_ENV_MODE: "PROD"
       KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "${KEYCLOAK_URL}/auth/realms/kogito/.well-known/openid-configuration"
       KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "management-console"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
 
   task-console:
     container_name: task-console
@@ -110,10 +112,11 @@ services:
         condition: service_healthy
     environment:
       RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: "${JBPM_URL}/graphql"
+      RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
       KOGITO_CONSOLES_KEYCLOAK_URL: "${KEYCLOAK_URL}/auth"
       KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: "${KEYCLOAK_URL}/auth/realms/kogito/.well-known/openid-configuration"
       KOGITO_CONSOLES_KEYCLOAK_REALM: "kogito"
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "task-console"
+      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: "kogito-console-quarkus"
 
   jbpm-compact-architecture-example-service:
     container_name: jbpm-compact-architecture-example-service
@@ -122,16 +125,28 @@ services:
     ports:
       - "8080:8080"
     environment:
+      KOGITO_JOBS_SERVICE_URL: "http://${BROWSER_HOST}:8080"
+      KOGITO_SERVICE_URL: "http://${BROWSER_HOST}:8080"
+      KOGITO_DATAINDEX_HTTP_URL: "http://${BROWSER_HOST}:8080"
+      QUARKUS_HTTP_CORS_ORIGINS: "/.*/"
+      QUARKUS_DATASOURCE_REACTIVE_URL: "postgresql://postgres:5432/kogito"
       QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgres/kogito"
       QUARKUS_DATASOURCE_USERNAME: "kogito-user"
       QUARKUS_DATASOURCE_PASSWORD: "kogito-pass"
       QUARKUS_HTTP_CORS: "true"
-      QUARKUS_HTTP_CORS_ORIGINS: "/.*/,${TASK_URL},${MANAGEMENT_URL}"
+      QUARKUS_DB_KIND: "postgresql"
+      # QUARKUS_HTTP_CORS_ORIGINS: "/.*/,${TASK_URL},${MANAGEMENT_URL}"
       QUARKUS_HTTP_CORS_METHODS: "GET,POST,PUT,DELETE,OPTIONS"
       QUARKUS_HTTP_CORS_HEADERS: "accept,authorization,content-type,x-requested-with,x-forward-for,content-length,host,origin,referer,Access-Control-Request-Method,Access-Control-Request-Headers"
       QUARKUS_HTTP_CORS_EXPOSED_HEADERS: "Content-Disposition,Content-Type"
       QUARKUS_HTTP_CORS_ACCESS_CONTROL_MAX_AGE: "24H"
       QUARKUS_HTTP_CORS_ACCESS_CONTROL_ALLOW_CREDENTIALS: "true"
+
+    depends_on:
+      postgres:
+        condition: service_healthy
+    extra_hosts:
+      - "${BROWSER_HOST}:host-gateway"
 
 volumes:
   postgres_data:
